objects/copado__MultiCloudAutomation__mdt.object
<CustomObject>
    <fields>
        <fullName>copado__Action__c</fullName>
        <label>Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__DeployAPIName__c</fullName>
        <label>DeployAPIName</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Job_Template__c</fullName>
        <label>Job Template API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__PackageCreateApiName__c</fullName>
        <label>PackageCreateApiName</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__PackageImportAPIName__c</fullName>
        <label>PackageImportAPIName</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__PackageVersionCreateApiName__c</fullName>
        <label>PackageVersionCreateApiName</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__PackageVersionPublishAPIName__c</fullName>
        <label>PackageVersionPublishAPIName</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__PlatformName__c</fullName>
        <label>PlatformName</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>copado__Platform_Configuration__c</fullName>
        <label>Platform Configuration</label>
        <referenceTo>copado__ExtensionPackageConfiguration__mdt</referenceTo>
        <relationshipLabel>MultiCloudAutomations</relationshipLabel>
        <relationshipName>MultiCloudAutomations</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>copado__PromoteAPIName__c</fullName>
        <label>PromoteAPIName</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>MultiCloudAutomation</label>
    <listViews>
        <fullName>Package_fields_included</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>NamespacePrefix</columns>
        <columns>copado__PlatformName__c</columns>
        <columns>copado__PackageCreateApiName__c</columns>
        <columns>copado__PackageImportAPIName__c</columns>
        <columns>copado__PackageVersionCreateApiName__c</columns>
        <columns>copado__PackageVersionPublishAPIName__c</columns>
        <filterScope>Everything</filterScope>
        <label>Package fields included</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>MultiCloudAutomations</pluralLabel>
</CustomObject>